kubernetes/petclinic-chart/rendered.yaml
---
# Source: spring-petclinic/templates/deployment-petclinic.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# Source: spring-petclinic/templates/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# Source: spring-petclinic/templates/deployment-petclinic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: petclinic
        image: 184574354202.dkr.ecr.eu-central-1.amazonaws.com/springpetclinic:latest
        imagePullPolicy: Always
        
        ports:
        - containerPort: 8080
---
# Source: spring-petclinic/templates/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-db
        image: "mysql:9.2"
        ports:
        - containerPort: 3306
---
# Source: spring-petclinic/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: 
            pathType: 
            backend:
              service:
                name: petclinic-service
                port:
                  number: 8080
